--- a/helm/Makefile
+++ b/helm/Makefile
@@ -28,15 +28,11 @@ update-base: ## Update apps that use base chart
 	helm upgrade --install sonarr ./base/ --values sonarr.yaml
 	helm upgrade --install syncthing ./base/ --values syncthing.yaml
 	helm upgrade --install tautulli ./base/ --values tautulli.yaml
+	helm upgrade --install wakatime-exporter ./base/ --values wakatime-exporter.yaml
 
 update-prometheus: ## Update Prometheus
 	helm uninstall prometheus; \
 	  helm upgrade --install prometheus ./base/ --values prometheus.yaml
-
-update-pomerium: ## Update Pomerium
-	cd pomerium; \
-	  helm dependency update; \
-	  helm upgrade --install pomerium .
 
 update-traefik: ## Update Traefik
 	cd traefik; \
