--- a/helm/code-server.yaml
+++ b/helm/code-server.yaml
@@ -2,8 +2,7 @@ replicaCount: 1
 
 image:
   repository: linuxserver/code-server
-  tag: version-v3.12.0
-  pullPolicy: IfNotPresent
+  tag: 3.12.0
 
 services:
   - type: LoadBalancer
