--- a/helm/qbittorrent.yaml
+++ b/helm/qbittorrent.yaml
@@ -2,8 +2,7 @@ replicaCount: 1
 
 image:
   repository: linuxserver/qbittorrent
-  tag: version-14.3.8.99202109100310-7422-338d9a084ubuntu20.04.1
-  pullPolicy: IfNotPresent
+  tag: 20.04.1
 
 services:
   - type: LoadBalancer
