--- a/helm/plex.yaml
+++ b/helm/plex.yaml
@@ -28,12 +28,17 @@ volumes:
   - name: plex-storage
     hostPath:
       path: "/storage"
+  - name: plex-pictures
+    hostPath:
+      path: "/mnt/wdata/photos"
 
 volumeMounts:
   - name: plex-config
     mountPath: "/config"
   - name: plex-storage
     mountPath: "/storage"
+  - name: plex-pictures
+    mountPath: "/photos"
 
 env:
   - name: UMASK
