--- a/helm/base/templates/deployment.yaml
+++ b/helm/base/templates/deployment.yaml
@@ -13,6 +13,9 @@ spec:
         app: {{ .Release.Name }}
         name: {{ .Release.Name }}
     spec:
+      {{- if .Values.nodeName }}
+      nodeName: {{ .Values.nodeName }}
+      {{- end }}
       volumes:
         {{- if .Values.volumes }}
           {{- toYaml .Values.volumes | nindent 6}}
