--- a/helm/rsnapshot.yaml
+++ b/helm/rsnapshot.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: linuxserver/rsnapshot
-  tag: latest
+  tag: 1.4.3
 
 volumes:
   - name: rsnapshot-config
@@ -34,10 +34,18 @@ volumeMounts:
   - name: rsnapshot-configmap
     subPath: snap.sh
     mountPath: "/config/snap.sh"
+  - name: rsnapshot-configmap
+    subPath: add-curl
+    mountPath: "/config/custom-cont-init.d/31-add-curl"
 
 env:
   - name: TZ
     value: "Europe/Chisinau"
+  - name: MESSENGER_BASE_URL
+    value: "http://messenger:8182"
+
+waitForServices:
+  - messenger
 
 configmaps:
   rsnapshot-configmap:
@@ -75,7 +83,7 @@ configmaps:
       loglevel	3
       logfile	/config/rsnapshot.log
       lockfile	/var/run/rsnapshot.pid
-      link_dest	1
+      link_dest	0
 
       backup	/data/photos/camera/		wdata/
       backup	/data/photos/pictures		wdata/
@@ -86,39 +94,45 @@ configmaps:
 
       set -e
 
-      COUNTER_FILE="/config/.snap"
       EVERY=6
 
       # locals
-      _count=""
+      _count=$(curl -s "$MESSENGER_BASE_URL/gcs/rsnapshot/1/increment")
 
-      if test -f "$COUNTER_FILE"; then
-          _count=$(cat $COUNTER_FILE)
-      else
-        _count="1"
-        echo "$_count" > $COUNTER_FILE
+      log() {
+        echo "> $1"
+        curl -s -G "$MESSENGER_BASE_URL/telegram/rsnapshot" --data-urlencode "data=running backup: $1"
+      }
+
+      echo "$(date) - $_count"
+
+      if [ "$(( _count % (EVERY*7*30*12) ))" -eq 0 ]; then
+        log yearly
+        rsnapshot yearly
       fi
 
-      echo "$_count"
-
       if [ "$(( _count % (EVERY*7*30) ))" -eq 0 ]; then
-        echo "> monthly"
+        log monthly
         rsnapshot monthly
       fi
 
       if [ "$(( _count % (EVERY*7) ))" -eq 0 ]; then
-        echo "> weekly"
+        log weekly
         rsnapshot weekly
       fi
 
       if [ "$(( _count % EVERY ))" -eq 0 ]; then
-        echo "> daily"
+        log daily
         rsnapshot daily
       fi
 
-      echo "> hourly"
+      log hourly
       rsnapshot hourly
 
-      echo "done"
+      echo "$(date) - done"
 
-      echo $((_count+1)) > $COUNTER_FILE
+    add-curl: |-
+      #!/usr/bin/with-contenv bash
+      apk add curl
+      echo $MESSENGER_BASE_URL
+      curl -s -G "$MESSENGER_BASE_URL/telegram/rsnapshot" --data-urlencode "data=started"
