--- a/helm/traefik/values.yaml
+++ b/helm/traefik/values.yaml
@@ -1,4 +1,10 @@
 traefik:
+  service:
+    enabled: true
+    type: LoadBalancer
+    externalIPs:
+     - 192.168.29.242
+
   ports:
     traefik:
       expose: true
