Upgrades and new services (#44)
* feat: add node-exporter

* add adguard

* add adguard-exporter

* add bazarr

* add cloudflared

* update code-server version

* update grafana version

* add handbrake

* add http-https-echo

* remove ingressRoutes from httpbin

* add influxdb

* add reinstall-traefik command to Makefile

* add ombi

* add organizr

* add overseerr

* upgrade plex and add new storage

* update qbittorrent version

* update radarr version

* update sonarr version and add new storage

* update tautulli version

* add mosquitto

* update jackett version

* add rclone

* update syncthing version

* add tdarr

* add home-assistant

--- a/helm/http-https-echo.yaml
+++ b/helm/http-https-echo.yaml
@@ -1,11 +1,10 @@
 replicaCount: 1
 
 image:
-  repository: kennethreitz/httpbin
-  tag: latest
+  repository: mendhak/http-https-echo
+  tag: 24
 
 services:
   - type: LoadBalancer
     ports:
       - port: 8080
-        containerPort: 80
