--- a/helm/base/templates/deployment.yaml
+++ b/helm/base/templates/deployment.yaml
@@ -42,6 +42,8 @@ spec:
         - name: {{ .Release.Name }}
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
           args:
             {{- if .Values.args }}
               {{- toYaml .Values.args | nindent 12 }}
