--- a/helm/base/values.yaml
+++ b/helm/base/values.yaml
@@ -10,12 +10,12 @@ nodeName: kira-pc
 restartOnConfigChange: true
 
 services:
-  - type: LoadBalancer
-    suffix:
-    ports:
-      - protocol: TCP
-        port: 80
-        containerPort: 80
+#  - type: LoadBalancer
+#    suffix:
+#    ports:
+#      - protocol: TCP
+#        port: 80
+#        containerPort: 80
 
 labels:
 
