--- a/helm/home-assistant.yaml
+++ b/helm/home-assistant.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: ghcr.io/home-assistant/home-assistant
-  tag: 2023.7.2
+  tag: 2023.11.2
 
 services:
   - type: LoadBalancer
@@ -28,8 +28,6 @@ ingressRoutes:
   websecure:
     match: Host(`home.hobroker.me`)
     port: 8123
-    middlewares:
-      - name: traefik-sso-rate-limit
 
 configmaps:
   home-assistant-configuration:
@@ -55,3 +53,6 @@ configmaps:
       mqtt: !include custom/mqtt.yaml
       telegram_bot: !include custom/telegram_bot.yaml
       influxdb: !include custom/influxdb.yaml
+      google_assistant: !include custom/google_assistant.yaml
+      frontend:
+        themes: !include_dir_merge_named themes
