fix: port conflict between traefik metrics and node-exporter

--- a/charts/traefik/values.yaml
+++ b/charts/traefik/values.yaml
@@ -15,6 +15,9 @@ service:
 ports:
   traefik:
     expose: true
+  metrics:
+    expose: true
+    exposedPort: 9101
 
 deployment:
   additionalVolumes:
