--- a/charts/exporters/wakatime-exporter.yaml
+++ b/charts/exporters/wakatime-exporter.yaml
@@ -5,9 +5,15 @@ image:
   tag: 0.1.0
 
 services:
-  - type: LoadBalancer
+  - type: ClusterIP
     ports:
-      - port: 9212
+      - name: http
+        port: 9212
+
+serviceMonitor:
+  enabled: true
+  endpoints:
+    - port: http
 
 env:
   - name: WAKA_API_KEY
