feat: disable prometheus from traefik

--- a/charts/traefik/values.yaml
+++ b/charts/traefik/values.yaml
@@ -19,6 +19,9 @@ ports:
     expose: true
     exposedPort: 9101
 
+metrics:
+  prometheus: null
+
 deployment:
   additionalVolumes:
     - name: traefik-acme
