feat(traefik): enable metrics

--- a/charts/traefik/values.yaml
+++ b/charts/traefik/values.yaml
@@ -20,7 +20,12 @@ ports:
     exposedPort: 9101
 
 metrics:
-  prometheus: null
+  prometheus:
+    disableAPICheck: true
+    service:
+      enabled: true
+    serviceMonitor:
+      jobLabel: traefik
 
 deployment:
   additionalVolumes:
