fix(prometheus): disable alert rules

--- a/charts/prometheus-operator/values.yaml
+++ b/charts/prometheus-operator/values.yaml
@@ -33,3 +33,9 @@ grafana:
 
 alertmanager:
   enabled: false
+
+defaultRules:
+  create: true
+  rules:
+    alertmanager: false
+    windows: false
