--- a/charts/base/templates/servicemonitor.yaml
+++ b/charts/base/templates/servicemonitor.yaml
@@ -1,16 +1,14 @@
-{{- if .Values.serviceMonitor }}
+{{- if .Values.serviceMonitor.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: {{ .Release.Name }}
   labels:
     app: {{ .Release.Name }}
-    release: {{ .Values.serviceMonitor.release }}
 spec:
   selector:
     matchLabels:
       app: {{ .Release.Name }}
-      release: prometheus-operator
   endpoints:
     {{- toYaml .Values.serviceMonitor.endpoints | nindent 4 }}
 {{- end }}
