--- a/charts/exporters/adguard-exporter.yaml
+++ b/charts/exporters/adguard-exporter.yaml
@@ -8,12 +8,13 @@ services:
   - type: ClusterIP
     ports:
       - port: 9617
-        name: http
+        name: metrics
 
 serviceMonitor:
   enabled: true
   endpoints:
-    - port: http
+    - port: metrics
+      interval: 30s
 
 env:
   - name: adguard_protocol
@@ -38,6 +39,6 @@ env:
   - name: server_port
     value: "9617"
   - name: interval
-    value: "15s"
+    value: "30s"
   - name: log_limit
     value: "10000"
