--- a/charts/exporters/wakatime-exporter.yaml
+++ b/charts/exporters/wakatime-exporter.yaml
@@ -7,13 +7,14 @@ image:
 services:
   - type: ClusterIP
     ports:
-      - name: http
+      - name: metrics
         port: 9212
 
 serviceMonitor:
   enabled: true
   endpoints:
-    - port: http
+    - port: metrics
+      interval: 1m
 
 env:
   - name: WAKA_API_KEY
