--- a/charts/base/templates/service.yaml
+++ b/charts/base/templates/service.yaml
@@ -7,6 +7,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ $serviceName }}
+  labels:
+    app: {{ $releaseName }}
+  {{- if .metadata }}
+  {{- toYaml .metadata | nindent 2 }}
+  {{- end }}
 spec:
   type: {{ .type }}
   selector:
@@ -14,11 +19,9 @@ spec:
   ports:
     {{- $serviceType := .type }}
     {{- range .ports }}
-    {{- $containerPort := .containerPort | default .port }}
-    {{- $protocol := .protocol | default "TCP" }}
-    - name: {{ $protocol | lower }}-{{ $containerPort }}
-      protocol: {{ $protocol | quote }}
-      targetPort: {{ $containerPort }}
+    - name: {{ .name  }}
+      protocol: {{ .protocol | default "TCP" | quote }}
+      targetPort: {{ .containerPort | default .port }}
       port: {{ .port }}
       {{- if eq $serviceType "NodePort" }}
       nodePort: {{ .port }}
