--- a/charts/prometheus-operator/values.yaml
+++ b/charts/prometheus-operator/values.yaml
@@ -1,6 +1,8 @@
 prometheus:
   prometheusSpec:
     retention: 3660d
+    podMonitorSelectorNilUsesHelmValues: false
+    serviceMonitorSelectorNilUsesHelmValues: false
     storageSpec:
       volumeClaimTemplate:
         spec:
@@ -9,7 +11,6 @@ prometheus:
           resources:
             requests:
               storage: 5G
-
   ingress:
     enabled: true
     ingressClassName: traefik
@@ -25,23 +26,16 @@ grafana:
     hosts:
       - grafana.hobroker.me
   persistence:
-    type: pvc
     enabled: true
+    type: pvc
     storageClassName: local-path
-    size: 5G
+    size: 5Gi
 
 alertmanager:
-  ingress:
-    enabled: true
-    ingressClassName: traefik
-    hosts:
-      - alertmanager.hobroker.me
-  alertmanagerSpec:
-    storage:
-      volumeClaimTemplate:
-        spec:
-          storageClassName: local-path
-          accessModes: ["ReadWriteOnce"]
-          resources:
-            requests:
-              storage: 5G
+  enabled: false
+
+defaultRules:
+  create: true
+  rules:
+    alertmanager: false
+    windows: false
