--- a/charts/traefik/values.yaml
+++ b/charts/traefik/values.yaml
@@ -15,6 +15,17 @@ service:
 ports:
   traefik:
     expose: true
+  metrics:
+    expose: true
+    exposedPort: 9101
+
+metrics:
+  prometheus:
+    disableAPICheck: true
+    service:
+      enabled: true
+    serviceMonitor:
+      jobLabel: traefik
 
 deployment:
   additionalVolumes:
