--- a/charts/base/templates/ingressroute.yaml
+++ b/charts/base/templates/ingressroute.yaml
@@ -3,7 +3,7 @@
 {{- if .Values.ingressRoutes }}
 {{- range $entryPoint, $value := .Values.ingressRoutes }}
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: {{ $releaseName }}-{{ $entryPoint }}
