--- a/charts/media/plex/values.yaml
+++ b/charts/media/plex/values.yaml
@@ -9,6 +9,9 @@ controllers:
           repository: linuxserver/plex
           tag: 1.32.8
           pullPolicy: IfNotPresent
+        env:
+          PGID: "1000"
+          PUID: "1000"
 
 service:
   main:
