--- a/charts/monitoring/wakatime-exporter/values.yaml
+++ b/charts/monitoring/wakatime-exporter/values.yaml
@@ -1,24 +1,28 @@
-replicaCount: 1
+defaultPodOptions:
+  automountServiceAccountToken: false
 
-image:
-  repository: macropower/wakatime-exporter
-  tag: 0.1.0
+controllers:
+  main:
+    containers:
+      main:
+        image:
+          repository: macropower/wakatime-exporter
+          tag: 0.1.0
+          pullPolicy: IfNotPresent
+        envFrom:
+          - secretRef:
+              name: wakatime-exporter-secrets
 
-services:
-  - type: ClusterIP
+service:
+  main:
+    type: ClusterIP
     ports:
-      - name: metrics
+      http:
         port: 9212
 
 serviceMonitor:
-  enabled: true
-  endpoints:
-    - port: metrics
-      interval: 1m
-
-env:
-  - name: WAKA_API_KEY
-    valueFrom:
-      secretKeyRef:
-        name: wakatime-exporter-secrets
-        key: WAKA_API_KEY
+  main:
+    enabled: true
+    endpoints:
+      - port: http
+        interval: 1m
